# svrNet

./: BUG.txt  CMakeLists.txt  README.md  design.txt  test.c
inc/: svr_net.h
include/: ep_svr.h
src/: CMakeLists.txt  ep_svr.c  svr_start.c
src/conn/: conn.cpp  conn.h
src/core/: engine.c  engine.h  pack.c  pack.h
src/epoll/: CMakeLists.txt  ep_svr.c  ep_svr.h  net_config.h  pack.c  pack.h
src/epoll/cache/: CMakeLists.txt  cache.cpp  cache.h
src/epoll/connect-mgr/: conn.cpp  conn.h
src/epoll/rw/: engine.c  engine.h
src/helper/: recvhelper.cpp  recvhelper.h  sendhelper.cpp  sendhelper.h
src/inc/: common.h  config.h
test/: CMakeLists.txt  test.c  test.cpp
third/libuv/: CMakeLists.txt
third/libuv/src/unix/: pipe.c
third/libuv/src/win/: pipe.c
third/libxml2/: CMakeLists.txt
third/libxml2/libxml/: xmlexports.h
third/libxml2/unix-config/: config.h
third/list/: CMakeLists.txt  Glist.c  Glist.h
third/queue/: CMakeLists.txt  Gqueue.c  Gqueue.h
third/threadpool/: CMakeLists.txt  threadpool.c  threadpool.h
